Fix: Changed sidebar nav menu z-index style

--- a/src/presentation/components/sidebar/sidebar-styles.scss
+++ b/src/presentation/components/sidebar/sidebar-styles.scss
@@ -27,7 +27,7 @@
     top: 0;
     left: -100%;
     transition: 850ms;
-    z-index: 1;
+    z-index: 999;
     margin-top: 75px;
 }
 
